# dicomlib-playground

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  TODO.md  cspell.json  dicom.tsv  tag_dictionary_header.txt
docs/: cdataset.h  dicomdate.cpp  dicomdate.h  draft_config.yml  knowledge-base.md
libs/dpx-dicom-charset/: Cargo.toml
libs/dpx-dicom-charset/src/: ascii.rs  char_class.rs  codec.rs  kb.rs  lib.rs  tables.rs  term.rs
libs/dpx-dicom-charset/src/_doc/: builtin_terms.rs  iso_ir_char_sets.rs  special_characters.rs  supported_encodings.rs
libs/dpx-dicom-charset/src/codec/: external_impl.rs  iso2022_impl.rs  iso2022_simple_impl.rs  non_iso2022_impl.rs  utf8_impl.rs
libs/dpx-dicom-charset/src/tables/: constants.rs  multi_byte.rs  single_byte.rs  tests.rs
libs/dpx-dicom-charset/src/tables/multi_byte/: chinese.rs  jisx0208.rs  jisx0212.rs  ksx1001.rs
libs/dpx-dicom-charset/src/tables/multi_byte/chinese/: index.rs  ranges.rs
libs/dpx-dicom-charset/src/tables/single_byte/: cp_1250.rs  cp_1251.rs  cp_1252.rs  cp_1253.rs  cp_1254.rs  cp_1255.rs  cp_1256.rs  cp_1257.rs  cp_1258.rs  cp_866.rs  iso_ir_100.rs  iso_ir_101.rs  iso_ir_109.rs  iso_ir_110.rs  iso_ir_126.rs  iso_ir_127.rs  iso_ir_13.rs  iso_ir_138.rs  iso_ir_14.rs  iso_ir_144.rs  iso_ir_148.rs  iso_ir_166.rs  iso_ir_203.rs  iso_ir_227.rs  iso_ir_234.rs  iso_ir_6.rs  koi8_r.rs
libs/dpx-dicom-charset/test_files/: cp_1250.txt  cp_1251.txt  cp_1252.txt  cp_1253.txt  cp_1254.txt  cp_1255.txt  cp_1256.txt  cp_1257.txt  cp_1258.txt  cp_866.txt  gb18030.txt  gb2312.txt  iso_ir_100.txt  iso_ir_101.txt  iso_ir_109.txt  iso_ir_110.txt  iso_ir_126.txt  iso_ir_127.txt  iso_ir_13.txt  iso_ir_138.txt  iso_ir_14.txt  iso_ir_144.txt  iso_ir_148.txt  iso_ir_166.txt  iso_ir_203.txt  iso_ir_227.txt  iso_ir_234.txt  iso_ir_6.txt  jisx0208.txt  jisx0212.txt  koi8_r.txt  ksx1001.txt
libs/dpx-dicom-charset/tools/: gen_94x94_table.py  gen_gb18030_tables.py  gen_single_byte_tables.py
libs/dpx-dicom-core/: Cargo.toml  README.md  dpx_dicom_core.natvis
libs/dpx-dicom-core/etc/: dicom.tsv  diconde.tsv  generic.tsv
libs/dpx-dicom-core/src/: charset.rs  config.rs  context.rs  dataset.rs  datetime.rs  error.rs  event.rs  lib.rs  network.rs  settings.rs  state.rs  tag.rs  tags.rs  transfer_syntax.rs  uid.rs  uids.rs  utils.rs  vr.rs
libs/dpx-dicom-core/src/config/: complex.rs  custom.rs  global.rs  loader.rs  macros.rs  manager.rs  map.rs  meta.rs  mod.rs  registry.rs  settings.rs  subst.rs  typed.rs  validator.rs  value.rs
libs/dpx-dicom-core/src/dataset/: container.rs  element.rs  transfer_syntax.rs
libs/dpx-dicom-core/src/datetime/: tests.rs
libs/dpx-dicom-core/src/network/: address.rs  assoc.rs
libs/dpx-dicom-core/src/tag/: dicom.rs  dicom_meta.rs  diconde.rs  diconde_meta.rs  dict.rs  dict_impl.rs  generic_meta.rs  meta_impl.rs  tag.rs  tag_impl.rs  tagkey.rs  tagkey_impl.rs
libs/dpx-dicom-core/src/tag/dict_impl/: tests.rs
libs/dpx-dicom-core/src/tags/: diconde.rs  generic.rs
libs/dpx-dicom-core/src/uid/: uid_meta.rs
libs/dpx-dicom-core/src/utils/: macros.rs  unescape.rs
libs/dpx-dicom-data/: Cargo.toml
libs/dpx-dicom-data/src/: adapt.rs  convert.rs  dataset.rs  item.rs  lib.rs  sequence.rs  value.rs
libs/dpx-dicom-data/src/dcm_parser/: core.rs  input.rs  mod.rs  reader.rs
libs/dpx-dicom-data/src/dcm_writer/: core.rs  mod.rs  writer.rs
utils/mk-dicom-tsv/: Cargo.toml  header.txt  main.rs  mk-dicom-tsv.rs
utils/mk-tags-rs/: Cargo.toml  dicom_tags_header.txt  diconde_tags_header.txt  generate_all.sh  generic_tags_header.txt  main.rs  meta_header.rs  metas_header.txt  mk-tags-rs.rs  tags_header.rs
