[workspace.package]
version = "0.1.0"
authors = [ "Alexei Devyatnikov <to@stingx.ru>" ]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StingX84/dicomlib-playground"
categories = ["network-programming"]

[workspace]
resolver = "2"

members = [
    # Libraries
    "libs/dpx-dicom-charset",
    "libs/dpx-dicom-core",

    # Utilities
    "utils/mk-dicom-tsv",
    "utils/mk-tags-rs",
]
