[package]
name = "dpx-dicom-core"
description = "Core DICOM library component"
keywords = ["dicom"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["serde"]
tokio = ["dep:tokio"]
serde = ["dep:serde", "dep:serde_json", "dep:serde-saphyr", "dep:humantime"]
uuid = [ "dep:uuid" ]
unstable = []
static_dictionary = []


[dependencies]

##################
# Required dependencies

# Lock-free atomic swapping of Arc pointers for shared global DICOM context without a mutex
arc-swap = "1.9.1"
# Fast CRC32 for data integrity verification in DICOM datasets
crc32fast = "1.5"
# Cross-platform file system path manipulation and normalization
glob = "0.3"
# Link-time registration of VR types, tag dictionaries, and other extensible DICOM registries
inventory = "0.3"
# Machine-unique identifier used as a component in generated DICOM UIDs
machine-uid = "0.6"
# Compile-time string concatenation for macros
paste = "1.0"
# Regular expression matching for per-key configuration value validation
regex = "1.11"
# Structured, async-aware logging and diagnostics throughout the library
tracing = "0.1"

##################
# Optional dependencies

# Serialization/deserialization support for DICOM types (tags, VRs, UIDs, etc.)
serde = { version = "1.0", optional = true, features = ["derive"] }
# JSON value model used as the exchange tree for application-defined `Complex` config values
serde_json = { version = "1.0", optional = true }
# Streaming, schema-driven YAML deserialization with source locations for the config loader
serde-saphyr = { version = "0.0.28", optional = true }
# Human-friendly duration parsing ("10s", "5m") for configuration values
humantime = { version = "2.3", optional = true }
# Universally unique identifier (UUID) support for DICOM UIDs and other identifiers
uuid = { version = "1", optional = true, features = ["v4"] }
# Asynchronous runtime for concurrent operations, required for async DICOM I/O
tokio = { version = "1", optional = true, features = ["full"] }

[dev-dependencies]
# Test helpers for asserting serde round-trip behavior
serde_test = { version = "1.0" }
