[package]
name = "mk_dicom_tsv"
description = "Utility to parse DICOM standard XML and produce TSV tag dictionary"
keywords = ["dicom"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "mk_dicom_tsv"
path = "main.rs"

[dependencies]
dpx-dicom-core = { path = "../../libs/dpx-dicom-core" }
roxmltree = "0.17"
clap = { version = "4.1", features = [ "derive" ]}
snafu = "0.7.4"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
whoami = "1.3.0"
