[package]
name = "mk-tags-rs"
description = "Utility to create Tag and tag::Meta constant definition files from tsv dictionary"
keywords = ["dicom"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "mk-tags-rs"
path = "mk-tags-rs.rs"

[dependencies]
dpx-dicom-core = { path = "../../libs/dpx-dicom-core" }
clap = { version = "4.1", features = [ "derive" ]}
snafu = "0.7.4"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
whoami = "1.3.0"
